2009-10-26  Daniel Bates  <dbates@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30491

        Fixes an issue where pressing return/enter on the keyboard 
        in <isindex> does not submit it if is not within a <form>.

        According to the HTML 2.0 thru HTML 4.01 spec 
        (http://www.w3.org/MarkUp/html-spec/html-spec_7.html#SEC7.5), the 
        <isindex> element does not need to be within a <form> element in 
        order to submit it. It can submitted on its own. Also, if present,
        the href property of the <base> element will dictate where to submit
        the value of the <isindex> element (this is analogous to the action 
        property of the <form> element).

        Tests: http/tests/misc/isindex-with-no-form-base-href.html
               http/tests/misc/isindex-with-no-form.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::defaultEventHandler): Calls createTemporaryFormForIsIndex()
        to create a <form> if none is present and we are an <isindex> element.
        (WebCore::HTMLInputElement::createTemporaryFormForIsIndex): Added.
        * html/HTMLInputElement.h:

2009-10-26  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Crash occurs after launching Newsfire 1.6 for the first time
        https://bugs.webkit.org/show_bug.cgi?id=30807

        Use a RetainPtr in ObjcBinding to ensure that we adequately
        protect the autorelease pool from GC in GC'd applications.

        * bridge/objc/objc_instance.h:
        * bridge/objc/objc_instance.mm:
        (ObjcInstance::ObjcInstance):
        (ObjcInstance::virtualEnd):

2009-10-26  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed.

        [Qt] Build fix for QtWebKit after r50125.

        * WebCore.pro: Rename TimelineItem to TimelineRecord.

2009-10-26  Matt Mueller  <mattm@chromium.org>

        Reviewed by Darin Adler.
