@@ -91,6 +91,7 @@ ObjcInstance::ObjcInstance(id instance, PassRefPtr<RootObject> rootObject)
     : Instance(rootObject)
     , _instance(instance)
     , _class(0)
+    , _pool(0)
     , _beginCount(0)
 {
 }
@@ -134,7 +135,7 @@ void ObjcInstance::virtualEnd()
     _beginCount--;
     ASSERT(_beginCount >= 0);
     if (!_beginCount) {
-        [_pool.get() drain];
+        [_pool drain];
         _pool = 0;
     }
 }
